--- a/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
+++ b/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
@@ -77,6 +77,11 @@
     <h3>Universitario: IES Siglo21 (2006 - 2010)</h3>
     <li>TÍTULO: Diseñador Gráfico y Publicitario.</li>
     <br>
+    <br>
+    <br>
+    <img src="InstagramLogo.png" alt="instagran" width="50">
+
+    <a href="https://www.instagram.com/powell.designs/">Para ver mi Portfolio en Instagram</a>
 </body>
 
 </html>
