--- a/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
+++ b/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
@@ -24,9 +24,9 @@
         <li>LOCALIDAD: (5186) Alta Gracia - Córdoba</li>
         <li>CELULAR: (03547) 15631210</li>
         <li>E-MAIL: seba.powell@gmail.com</li>
-    <br>
-    <br>
     </ul>
+    <br>
+    <br>
     <h2>EXPERIENCIA LABORAL</h2>
     <H3>1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
     <li>Cargo: Dibujante</li>
@@ -69,6 +69,11 @@
     <li>Cargo: Carpintero.</li>
     <li>Función: Empresa familiar donde desarrollamos muebles
         a medida, reparaciones en general y diseños propios.</li>
+    <br>
+    <h3>2020 - Actualmente: Tajamar Sistemas Electrónicos</h3>
+    <li>Cargo: Operador.</li>
+    <li>Función: Manejo de sistemas, asignación de tareas y elementos utilizados por los técnicos. Control y calibración
+        de canales analógicos y digitales. Manejo de materiales en stock. Carga y procesamiento de reclamos.</li>
     </ul>
     <br>
     <br>
@@ -79,10 +84,8 @@
     <h3>Universitario: IES Siglo21 (2006 - 2010)</h3>
     <li>TÍTULO: Diseñador Gráfico y Publicitario.</li>
     <br>
-    <br>
-    <br>
-    <img src="InstagramLogo.png" alt="instagran" width="50">
-    <a href="https://www.instagram.com/powell.designs/">Para ver mi Portfolio en Instagram</a>
+    <img src="Instagram Logo.png" alt="Instagran" width="50">
+    <a href="https://www.instagram.com/powell.designs/" target="_blank">Para ver mi Portfolio en Instagram</a>
 </body>
 
 </html>
