--- a/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
+++ b/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
@@ -86,6 +86,46 @@
     <br>
     <img src="Instagram Logo.png" alt="Instagran" width="50">
     <a href="https://www.instagram.com/powell.designs/" target="_blank">Para ver mi Portfolio en Instagram</a>
+    <br>
+    <br>
+    <h2>FORMULARIO DE CONTACTO</h2>
+    <form action="">
+        <p>
+            <label for="nom">Nombre</label>
+            <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
+        </p>
+
+        <p>
+            <label for="apell">Apellido</label>
+            <input type="text" name="Apellido" placeholder="Escribe tu Apellido">
+        </p>
+
+        <p>
+            <label for="mail">Mail</label>
+            <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico">
+        </p>
+
+        <p>
+            <label for="tel">Telefono</label>
+            <input type="number" name="Teléfono" placeholder="Escribe tu Teléfono">
+            <input type="checkbox" name="Fijo" value="Fijo" id="Fijo">
+            <label for="Fijo">Fijo</label>
+            <input type="checkbox" name="Celular" value="Celular" id="Celular">
+            <label for="Celular">Celular</label>
+        <h6>Ingresar con código de área sin 0 y número sin 15</h6>
+
+        </p>
+        <p>
+            <label for="Cons">Consulta</label>
+            <textarea name="Consultas" id="Consulta" cols="40" rows="20" placeholder="Escribe tu Consulta"></textarea>
+
+        </p>
+
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Cancelar">
+    </form>
+
+
 </body>
 
 </html>
