--- a/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
+++ b/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
@@ -90,6 +90,7 @@
     <br>
     <h2>FORMULARIO DE CONTACTO</h2>
     <form action="">
+<fieldset>
         <p>
             <label for="nom">Nombre</label>
             <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
@@ -112,17 +113,19 @@
             <label for="Fijo">Fijo</label>
             <input type="checkbox" name="Celular" value="Celular" id="Celular">
             <label for="Celular">Celular</label>
-        <h6>Ingresar con código de área sin 0 y número sin 15</h6>
-
+            <br>
+            <h5>Ingresar con código de área sin 0 y número sin 15</h5>
         </p>
+
         <p>
-            <label for="Cons">Consulta</label>
+            <label for="Cons">Consulta </label>
             <textarea name="Consultas" id="Consulta" cols="40" rows="20" placeholder="Escribe tu Consulta"></textarea>
 
         </p>
-
+    </fieldset>
         <input type="submit" value="Enviar">
         <input type="reset" value="Cancelar">
+    
     </form>
 
 
