--- a/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
+++ b/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<fieldset>
     <h1>SEBASTIÁN POWELL</h1>
     <h2>Curriculum Vitae</h2>
     <br>
@@ -25,107 +26,115 @@
         <li>CELULAR: (03547) 15631210</li>
         <li>E-MAIL: seba.powell@gmail.com</li>
     </ul>
+</fieldset>
     <br>
     <br>
-    <h2>EXPERIENCIA LABORAL</h2>
-    <H3>1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
-    <li>Cargo: Dibujante</li>
-    <li>Función: Dibujante de planos en Autocad.</li>
+ 
+    <fieldset>
+        <h2>EXPERIENCIA LABORAL</h2>
+        <H3>1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
+        <li>Cargo: Dibujante</li>
+        <li>Función: Dibujante de planos en Autocad.</li>
+        <br>
+        <h3>2001-2003 Tajamar TV Cable</h3>
+        <li>Cargo: Cobrador</li>
+        <li>Función: Gestionar el cobro de morosos.</li>
+        <br>
+        <h3>2004-2008: Multivoice (Call Center)</h3>
+        <li>Cargo: Agente de atención al cliente, Facilitador (asistencia),
+            Líder, Representante de Soporte Operativo (SOPER) todo para la
+            cuenta de CTI (en este momento CLARO)</li>
+        <li>Función: Como representante desarrolle la tarea de
+            atención del *611 por un periodo de 11 meses, luego como facilitador
+            ayudando a los agentes por 2 meses. Después me encomendaron la
+            tarea de Líder (Supervisor) por 12 meses, teniendo a cargo un grupo de
+            24 personas. Por último realicé tareas de facturación en Soporte Operativo.</li>
+        <br>
+        <h3>2008-2012: Teleperformance (Call Center)</h3>
+        <li>Cargo: Representante de atención al cliente, Supervisor,
+            Back Office. Cuenta de TELEFONICA Pymes y TELECOM.</li>
+        <li>Función: Como representante desarrolle tareas de
+            atención al cliente para TELEFONICA Pymes. Luego a los 6 meses me
+            asignaron la tarea de Supervisor por 11 meses, teniendo a cargo a un
+            grupo de 16 personas. También realice tareas de Back Offce (control de
+            ventas y carga de las mismas). Actualmente continuo en la empresa en la
+            cuenta de 112 de TELECOM.</li>
+        <br>
+        <h3>2012- 2020: DonCyberio (Propietario)</h3>
+        <li>Cargo: Atención al cliente, mantenimiento de PC,
+            impresiones, diseños, tramites por internet.</li>
+        <li>Función: Comercio propio donde desempeño las
+            tareas de atención al cliente, manejo de caja, impresiones en general,
+            tramites que se realizan por internet, mantenimiento de PC (instalación
+            de software, sistema operativo, juegos) Tipeos en Word y tablas de calculo
+            en Excel con aplicación de funciones.</li>
+        <br>
+        <h3>2018 - 2021: Carpintería Emilio Powell</h3>
+        <li>Cargo: Carpintero.</li>
+        <li>Función: Empresa familiar donde desarrollamos muebles
+            a medida, reparaciones en general y diseños propios.</li>
+        <br>
+        <h3>2020 - Actualmente: Tajamar Sistemas Electrónicos</h3>
+        <li>Cargo: Operador.</li>
+        <li>Función: Manejo de sistemas, asignación de tareas y elementos utilizados por los técnicos. Control y
+            calibración
+            de canales analógicos y digitales. Manejo de materiales en stock. Carga y procesamiento de reclamos.</li>
+        </ul>
+    </fieldset>
     <br>
-    <h3>2001-2003 Tajamar TV Cable</h3>
-    <li>Cargo: Cobrador</li>
-    <li>Función: Gestionar el cobro de morosos.</li>
     <br>
-    <h3>2004-2008: Multivoice (Call Center)</h3>
-    <li>Cargo: Agente de atención al cliente, Facilitador (asistencia),
-        Líder, Representante de Soporte Operativo (SOPER) todo para la
-        cuenta de CTI (en este momento CLARO)</li>
-    <li>Función: Como representante desarrolle la tarea de
-        atención del *611 por un periodo de 11 meses, luego como facilitador
-        ayudando a los agentes por 2 meses. Después me encomendaron la
-        tarea de Líder (Supervisor) por 12 meses, teniendo a cargo un grupo de
-        24 personas. Por último realicé tareas de facturación en Soporte Operativo.</li>
-    <br>
-    <h3>2008-2012: Teleperformance (Call Center)</h3>
-    <li>Cargo: Representante de atención al cliente, Supervisor,
-        Back Office. Cuenta de TELEFONICA Pymes y TELECOM.</li>
-    <li>Función: Como representante desarrolle tareas de
-        atención al cliente para TELEFONICA Pymes. Luego a los 6 meses me
-        asignaron la tarea de Supervisor por 11 meses, teniendo a cargo a un
-        grupo de 16 personas. También realice tareas de Back Offce (control de
-        ventas y carga de las mismas). Actualmente continuo en la empresa en la
-        cuenta de 112 de TELECOM.</li>
-    <br>
-    <h3>2012- 2020: DonCyberio (Propietario)</h3>
-    <li>Cargo: Atención al cliente, mantenimiento de PC,
-        impresiones, diseños, tramites por internet.</li>
-    <li>Función: Comercio propio donde desempeño las
-        tareas de atención al cliente, manejo de caja, impresiones en general,
-        tramites que se realizan por internet, mantenimiento de PC (instalación
-        de software, sistema operativo, juegos) Tipeos en Word y tablas de calculo
-        en Excel con aplicación de funciones.</li>
-    <br>
-    <h3>2018 - 2021: Carpintería Emilio Powell</h3>
-    <li>Cargo: Carpintero.</li>
-    <li>Función: Empresa familiar donde desarrollamos muebles
-        a medida, reparaciones en general y diseños propios.</li>
-    <br>
-    <h3>2020 - Actualmente: Tajamar Sistemas Electrónicos</h3>
-    <li>Cargo: Operador.</li>
-    <li>Función: Manejo de sistemas, asignación de tareas y elementos utilizados por los técnicos. Control y calibración
-        de canales analógicos y digitales. Manejo de materiales en stock. Carga y procesamiento de reclamos.</li>
-    </ul>
-    <br>
-    <br>
-    <h2>FORMACIÓN ACADÉMICA</h2>
-    <h3>Secundario: Instituto Industrial “El Obraje” (1992 - 1998)</h3>
-    <li>TÍTULO: Maestro Mayor de Obras.</li>
-    <br>
-    <h3>Universitario: IES Siglo21 (2006 - 2010)</h3>
-    <li>TÍTULO: Diseñador Gráfico y Publicitario.</li>
-    <br>
+    <fieldset>
+        <h2>FORMACIÓN ACADÉMICA</h2>
+        <h3>Secundario: Instituto Industrial “El Obraje” (1992 - 1998)</h3>
+        <li>TÍTULO: Maestro Mayor de Obras.</li>
+        <br>
+        <h3>Universitario: IES Siglo21 (2006 - 2010)</h3>
+        <li>TÍTULO: Diseñador Gráfico y Publicitario.</li>
+        <br>
+    </fieldset>
     <img src="Instagram Logo.png" alt="Instagran" width="50">
     <a href="https://www.instagram.com/powell.designs/" target="_blank">Para ver mi Portfolio en Instagram</a>
     <br>
     <br>
     <h2>FORMULARIO DE CONTACTO</h2>
     <form action="">
-<fieldset>
-        <p>
-            <label for="nom">Nombre</label>
-            <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
-        </p>
+        <fieldset>
+            <p>
+                <label for="nom">Nombre</label>
+                <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
+            </p>
 
-        <p>
-            <label for="apell">Apellido</label>
-            <input type="text" name="Apellido" placeholder="Escribe tu Apellido">
-        </p>
+            <p>
+                <label for="apell">Apellido</label>
+                <input type="text" name="Apellido" placeholder="Escribe tu Apellido">
+            </p>
 
-        <p>
-            <label for="mail">Mail</label>
-            <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico">
-        </p>
+            <p>
+                <label for="mail">Mail</label>
+                <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico">
+            </p>
 
-        <p>
-            <label for="tel">Telefono</label>
-            <input type="number" name="Teléfono" placeholder="Escribe tu Teléfono">
-            <input type="checkbox" name="Fijo" value="Fijo" id="Fijo">
-            <label for="Fijo">Fijo</label>
-            <input type="checkbox" name="Celular" value="Celular" id="Celular">
-            <label for="Celular">Celular</label>
-            <br>
+            <p>
+                <label for="tel">Telefono</label>
+                <input type="number" name="Teléfono" placeholder="Escribe tu Teléfono">
+                <input type="checkbox" name="Fijo" value="Fijo" id="Fijo">
+                <label for="Fijo">Fijo</label>
+                <input type="checkbox" name="Celular" value="Celular" id="Celular">
+                <label for="Celular">Celular</label>
+                <br>
             <h5>Ingresar con código de área sin 0 y número sin 15</h5>
-        </p>
+            </p>
 
-        <p>
-            <label for="Cons">Consulta </label>
-            <textarea name="Consultas" id="Consulta" cols="40" rows="20" placeholder="Escribe tu Consulta"></textarea>
+            <p>
+                <label for="Cons">Consulta </label>
+                <textarea name="Consultas" id="Consulta" cols="40" rows="20"
+                    placeholder="Escribe tu Consulta"></textarea>
 
-        </p>
-    </fieldset>
+            </p>
+        </fieldset>
         <input type="submit" value="Enviar">
         <input type="reset" value="Cancelar">
-    
+
     </form>
 
 
