--- a/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
+++ b/Unidad 2 HTML/Tarea 1 Unidad 2/Tarea Unidad 2 CV.html
@@ -10,7 +10,9 @@
 
 <body>
 <fieldset>
-    <h1>SEBASTIÁN POWELL</h1>
+    
+    <h1> <u>SEBASTIÁN POWELL</u> </h1>
+    
     <h2>Curriculum Vitae</h2>
     <br>
     <img src="IMG_20210308_110116_643.jpg" alt="Foto" width="300">
