--- a/Unidad 3 CSS/Tarea 1 Unidad 3/Tarea Unidad 3 CV.html
+++ b/Unidad 3 CSS/Tarea 1 Unidad 3/Tarea Unidad 3 CV.html
@@ -6,142 +6,163 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea Curriculum</title>
+    <link rel="icon" href="PowellDesigns.ico">
     <link rel="stylesheet" href="Tarea Unidad 3 CV.css">
-    <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto+Serif">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <header class="header">
+        <h1 class="header__title">SEBASTIÁN POWELL</h1>
+        <h2 class="header__subtitle"> CURRICULUM VITAE </h2>
+    </header>
 
-    <h1>SEBASTIÁN POWELL</h1>
-    <h2 id="subtitulo"> CURRICULUM VITAE </h2>
-
-    <br>
-    <div class="borde">
+    <div class="foto">
         <img src="IMG_20210308_110116_643.jpg" alt="Foto" width="300">
     </div>
-    <br>
-    <section>
-        <h2 id="info">INFORMACION PERSONAL</h2>
-        <ul>
-            <li><span class="destacado">EDAD:</span> 41 Años</li>
-            <li><span class="destacado">FECHA DE NACIMIENTO:</span> 06 / 05 / 1980</li>
-            <li><span class="destacado">DNI:</span> 27840756</li>
-            <li><span class="destacado">CUIT:</span> 20-27840756-0</li>
-            <li><span class="destacado">DIRECCIÓN:</span> Los Molinos 81</li>
-            <li><span class="destacado">LOCALIDAD:</span> (5186) Alta Gracia - Córdoba</li>
-            <li><span class="destacado">CELULAR:</span> (03547) 15631210</li>
-            <li><span class="destacado">E-MAIL:</span> seba.powell@gmail.com</li>
-        </ul>
-        <br>
-        <h2>EXPERIENCIA LABORAL</h2>
-        <H3>1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
-        <p><span class="destacado2">Cargo:</span> Dibujante</p>
-        <p><span class="destacado2">Función:</span> Dibujante de planos en Autocad.</p>
-        <br>
-        <h3>2001-2003 Tajamar TV Cable</h3>
-        <p><span class="destacado2">Cargo:</span> Cobrador</p>
-        <p><span class="destacado2">Función:</span> Gestionar el cobro de morosos.</p>
-        <br>
-        <h3>2004-2008: Multivoice (Call Center)</h3>
-        <p><span class="destacado2">Cargo:</span> Agente de atención al cliente, Facilitador (asistencia),
-            Líder, Representante de Soporte Operativo (SOPER) todo para la
-            cuenta de CTI (en este momento CLARO)</p>
-        <p><span class="destacado2">Función:</span> Como representante desarrolle la tarea de
-            atención del *611 por un periodo de 11 meses, luego como facilitador
-            ayudando a los agentes por 2 meses. Después me encomendaron la
-            tarea de Líder (Supervisor) por 12 meses, teniendo a cargo un grupo de
-            24 personas. Por último realicé tareas de facturación en Soporte Operativo.</p>
-        <br>
-        <h3>2008-2012: Teleperformance (Call Center)</h3>
-        <p><span class="destacado2">Cargo:</span> Representante de atención al cliente, Supervisor,
-            Back Office. Cuenta de TELEFONICA Pymes y TELECOM.</p>
-        <p><span class="destacado2">Función:</span> Como representante desarrolle tareas de
-            atención al cliente para TELEFONICA Pymes. Luego a los 6 meses me
-            asignaron la tarea de Supervisor por 11 meses, teniendo a cargo a un
-            grupo de 16 personas. También realice tareas de Back Offce (control de
-            ventas y carga de las mismas). Actualmente continuo en la empresa en la
-            cuenta de 112 de TELECOM.</p>
-        <br>
-        <h3>2012- 2020: DonCyberio (Propietario)</h3>
-        <p><span class="destacado2">Cargo:</span> Atención al cliente, mantenimiento de PC,
-            impresiones, diseños, tramites por internet.</p>
-        <p><span class="destacado2">Función:</span> Comercio propio donde desempeño las
-            tareas de atención al cliente, manejo de caja, impresiones en general,
-            tramites que se realizan por internet, mantenimiento de PC (instalación
-            de software, sistema operativo, juegos) Tipeos en Word y tablas de calculo
-            en Excel con aplicación de funciones.</p>
-        <br>
-        <h3>2018 - 2021: Carpintería Emilio Powell</h3>
-        <p><span class="destacado2">Cargo:</span> Carpintero.</p>
-        <p><span class="destacado2">Función:</span> Empresa familiar donde desarrollamos muebles
-            a medida, reparaciones en general y diseños propios.</p>
-        <br>
-        <h3>2021 - Actualmente: Tajamar Sistemas Electrónicos</h3>
-        <p><span class="destacado2">Cargo:</span> Operador.</p>
-        <p><span class="destacado2">Función:</span> Manejo de sistemas, asignación de tareas y elementos utilizados por
-            los técnicos. Control y
-            calibración de canales analógicos y digitales. Manejo de materiales en stock. Carga y procesamiento de
-            reclamos.</p>
-        <br>
-        <br>
-        <h2>FORMACIÓN ACADÉMICA</h2>
-        <h3>Secundario: Instituto Industrial “El Obraje” (1992 - 1998)</h3>
-        <p><span class="destacado2">TÍTULO:</span> Maestro Mayor de Obras.</p>
-        <br>
-        <h3>Universitario: IES Siglo21 (2006 - 2010)</h3>
-        <p><span class="destacado2">TÍTULO:</span> Diseñador Gráfico y Publicitario.</p>
-        <br>
 
+    <section class="section">
+        <div class="section__info">
+            <h2 class="section__info h2">INFORMACION PERSONAL</h2>
+            <ul class="section__info ul">
+                <li><span class="destacado">EDAD:</span> 41 Años</li>
+                <li><span class="destacado">FECHA DE NACIMIENTO:</span> 06 / 05 / 1980</li>
+                <li><span class="destacado">DNI:</span> 27840756</li>
+                <li><span class="destacado">CUIT:</span> 20-27840756-0</li>
+                <li><span class="destacado">DIRECCIÓN:</span> Los Molinos 81</li>
+                <li><span class="destacado">LOCALIDAD:</span> (5186) Alta Gracia - Córdoba</li>
+                <li><span class="destacado">CELULAR:</span> (03547) 15631210</li>
+                <li><span class="destacado">E-MAIL:</span> seba.powell@gmail.com</li>
+            </ul>
+        </div>
+        <div class="section__info">
+            <h2 class="section__info h2" id="experiencia">EXPERIENCIA LABORAL</h2>
+            <H3 class="section__info h3">1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
+            <p><span class="destacado">Cargo:</span> Dibujante</p>
+            <p><span class="destacado">Función:</span> Dibujante de planos en Autocad.</p>
+        </div>
+        <div class="section__info">
+            <h3 class="section__info h3">2001-2003 Tajamar TV Cable</h3>
+            <p><span class="destacado">Cargo:</span> Cobrador</p>
+            <p><span class="destacado">Función:</span> Gestionar el cobro de morosos.</p>
+        </div>
+        <div class="section__info">
+            <h3 class="section__info h3">2004-2008: Multivoice (Call Center)</h3>
+            <p><span class="destacado">Cargo:</span> Agente de atención al cliente, Facilitador (asistencia),
+                Líder, Representante de Soporte Operativo (SOPER) todo para la
+                cuenta de CTI (en este momento CLARO)</p>
+            <p><span class="destacado">Función:</span> Como representante desarrolle la tarea de
+                atención del *611 por un periodo de 11 meses, luego como facilitador
+                ayudando a los agentes por 2 meses. Después me encomendaron la
+                tarea de Líder (Supervisor) por 12 meses, teniendo a cargo un grupo de
+                24 personas. Por último realicé tareas de facturación en Soporte Operativo.</p>
+        </div>
+        <div class="section__info">
+            <h3 class="section__info h3">2008-2012: Teleperformance (Call Center)</h3>
+            <p><span class="destacado">Cargo:</span> Representante de atención al cliente, Supervisor,
+                Back Office. Cuenta de TELEFONICA Pymes y TELECOM.</p>
+            <p><span class="destacado">Función:</span> Como representante desarrolle tareas de
+                atención al cliente para TELEFONICA Pymes. Luego a los 6 meses me
+                asignaron la tarea de Supervisor por 11 meses, teniendo a cargo a un
+                grupo de 16 personas. También realice tareas de Back Offce (control de
+                ventas y carga de las mismas). Actualmente continuo en la empresa en la
+                cuenta de 112 de TELECOM.</p>
+        </div>
+        <div class="section__info">
+            <h3 class="section__info h3">2012- 2020: DonCyberio (Propietario)</h3>
+            <p><span class="destacado">Cargo:</span> Atención al cliente, mantenimiento de PC,
+                impresiones, diseños, tramites por internet.</p>
+            <p><span class="destacado">Función:</span> Comercio propio donde desempeño las
+                tareas de atención al cliente, manejo de caja, impresiones en general,
+                tramites que se realizan por internet, mantenimiento de PC (instalación
+                de software, sistema operativo, juegos) Tipeos en Word y tablas de calculo
+                en Excel con aplicación de funciones.</p>
+        </div>
+        <div class="section__info">
+            <h3 class="section__info h3">2018 - 2021: Carpintería Emilio Powell</h3>
+            <p><span class="destacado">Cargo:</span> Carpintero.</p>
+            <p><span class="destacado">Función:</span> Empresa familiar donde desarrollamos muebles
+                a medida, reparaciones en general y diseños propios.</p>
+        </div>
+        <div class="section__info">
+            <h3 class="section__info h3">2021 - Actualmente: Tajamar Sistemas Electrónicos</h3>
+            <p><span class="destacado">Cargo:</span> Operador.</p>
+            <p><span class="destacado">Función:</span> Manejo de sistemas, asignación de tareas y elementos utilizados
+                por los técnicos. Control y calibración de canales analógicos y digitales. Manejo de materiales en
+                stock. Carga y procesamiento de
+                reclamos.</p>
+        </div>
+        <div class="section__info">
+            <h2 class="section__info h2" id="formacion">FORMACIÓN ACADÉMICA</h2>
+            <h3 class="section__info h3">Secundario: Instituto Industrial “El Obraje” (1992 - 1998)</h3>
+            <p><span class="destacado">TÍTULO:</span> Maestro Mayor de Obras.</p>
 
-        <br>
-        <br>
-        <div id="formulario">
-            <h2>FORMULARIO DE CONTACTO</h2>
-            <form action="">
-
-                <p>
-                    <label for="nom">Nombre</label>
-                    <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
-                </p>
-
-                <p>
-                    <label for="apell">Apellido</label>
-                    <input type="text" name="Apellido" placeholder="Escribe tu Apellido">
-                </p>
-
-                <p>
-                    <label for="mail">Mail</label>
-                    <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico">
-                </p>
-
-                <p>
-                    <label for="tel">Telefono</label>
-                    <input type="number" name="Teléfono" placeholder="Escribe tu Teléfono">
-                    <input type="checkbox" name="Fijo" value="Fijo" id="Fijo">
-                    <label for="Fijo">Fijo</label>
-                    <input type="checkbox" name="Celular" value="Celular" id="Celular">
-                    <label for="Celular">Celular</label>
-                    <br>
-                <h5>Ingresar con código de área sin 0 y número sin 15</h5>
-                </p>
-
-                <p>
-                    <label for="Cons">Consulta </label>
-                    <textarea name="Consultas" id="Consulta" cols="40" rows="20"
-                        placeholder="Escribe tu Consulta"></textarea>
-
-                </p>
-
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Cancelar">
-
-            </form>
+            <h3 class="section__info h3">Universitario: IES Siglo21 (2006 - 2010)</h3>
+            <p><span class="destacado">TÍTULO:</span> Diseñador Gráfico y Publicitario.</p>
         </div>
     </section>
 
-    <div id="redes">
-        <img src="Instagram Logo.png" alt="Instagran" width="50">
-        <a href="https://www.instagram.com/powell.designs/" target="_blank">Para ver mi Portfolio en Instagram</a>
+    <div class="form">
+        <h2 class="form__h2">FORMULARIO DE CONTACTO</h2>
+        <form class="form__form" action="">
+            <ul>
+                <li>
+                    <label for="nom">Nombre</label><br>
+                    <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
+                <li>
+
+                <li>
+                   <label for="apell">Apellido</label> <br>
+                    <input type="text" name="Apellido" placeholder="Escribe tu Apellido">
+                </li>
+
+                <li>
+                    <label for="mail">Mail</label> <br>
+                    <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico">
+                </li>
+
+                <li>
+                    <label for="tel">Telefono</label> <br>
+                    <input type="number" name="Teléfono"
+                        placeholder="Ingresar con código de área sin 0 y número sin 15">
+                </li>
+
+                <li class="form__form--checkbox">
+                    <input type="checkbox" name="Fijo" value="Fijo" id="fijo">
+                    <label for="Fijo">Fijo</label>
+
+                    <input type="checkbox" name="Celular" value="Celular" id="celular">
+                    <label for="Celular">Celular</label>
+                </li>
+
+                <li>
+                    <label for="Cons">Consulta </label> <br>
+                    <textarea name="Consultas" id="Consulta" cols="80" rows="10"
+                        placeholder="Escribe tu Consulta"></textarea>
+                    <div>
+                        <button type="submit"> Enviar</button>
+                        <button type="reset"> Cancelar</button>
+                    </div>
+                </li>
+            </ul>
+        </form>
+    </div>
+
+    <footer class="footer">
+        <nav class="footer__redes">
+            <a href="https://www.instagram.com/powell.designs/" target="_blank"><img src="Instagram.png"
+                    alt="Instagran"></a>
+            <a href="mailto:seba.powell@gmail.com" target="_blank"><img src="Gmail.png" alt="gmail"></a>
+            <a href="https://wa.me/5493547631210" target="_blank"><img src="whatsapp.png" alt="whatsapp"></a>
+        </nav>
+
+    </footer>
+    <div>
+        <p class="footer__p">Todos los derechos reservados - Powell Designs - 2022</p>
     </div>
 
 </body>
