--- a/Unidad 3 CSS/Tarea 1 Unidad 3/Tarea Unidad 3 CV.html
+++ b/Unidad 3 CSS/Tarea 1 Unidad 3/Tarea Unidad 3 CV.html
@@ -27,8 +27,8 @@
 
     <section class="section">
         <div class="section__info">
-            <h2 class="section__info h2">INFORMACION PERSONAL</h2>
-            <ul class="section__info ul">
+            <h2 class="section__h2">INFORMACION PERSONAL</h2>
+            <ul class="section__ul">
                 <li><span class="destacado">EDAD:</span> 41 Años</li>
                 <li><span class="destacado">FECHA DE NACIMIENTO:</span> 06 / 05 / 1980</li>
                 <li><span class="destacado">DNI:</span> 27840756</li>
@@ -40,18 +40,18 @@
             </ul>
         </div>
         <div class="section__info">
-            <h2 class="section__info h2" id="experiencia">EXPERIENCIA LABORAL</h2>
-            <H3 class="section__info h3">1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
+            <h2 class="section__h2">EXPERIENCIA LABORAL</h2>
+            <H3 class="section__h3">1999-2000 : Studio - Estudio Integral de Arquitectura y diseño</H3>
             <p><span class="destacado">Cargo:</span> Dibujante</p>
             <p><span class="destacado">Función:</span> Dibujante de planos en Autocad.</p>
         </div>
         <div class="section__info">
-            <h3 class="section__info h3">2001-2003 Tajamar TV Cable</h3>
+            <h3 class="section__h3">2001-2003: Tajamar TV Cable</h3>
             <p><span class="destacado">Cargo:</span> Cobrador</p>
             <p><span class="destacado">Función:</span> Gestionar el cobro de morosos.</p>
         </div>
         <div class="section__info">
-            <h3 class="section__info h3">2004-2008: Multivoice (Call Center)</h3>
+            <h3 class="section__h3">2004-2008: Multivoice (Call Center)</h3>
             <p><span class="destacado">Cargo:</span> Agente de atención al cliente, Facilitador (asistencia),
                 Líder, Representante de Soporte Operativo (SOPER) todo para la
                 cuenta de CTI (en este momento CLARO)</p>
@@ -62,7 +62,7 @@
                 24 personas. Por último realicé tareas de facturación en Soporte Operativo.</p>
         </div>
         <div class="section__info">
-            <h3 class="section__info h3">2008-2012: Teleperformance (Call Center)</h3>
+            <h3 class="section__h3">2008-2012: Teleperformance (Call Center)</h3>
             <p><span class="destacado">Cargo:</span> Representante de atención al cliente, Supervisor,
                 Back Office. Cuenta de TELEFONICA Pymes y TELECOM.</p>
             <p><span class="destacado">Función:</span> Como representante desarrolle tareas de
@@ -73,7 +73,7 @@
                 cuenta de 112 de TELECOM.</p>
         </div>
         <div class="section__info">
-            <h3 class="section__info h3">2012- 2020: DonCyberio (Propietario)</h3>
+            <h3 class="section__h3">2012- 2020: DonCyberio (Propietario)</h3>
             <p><span class="destacado">Cargo:</span> Atención al cliente, mantenimiento de PC,
                 impresiones, diseños, tramites por internet.</p>
             <p><span class="destacado">Función:</span> Comercio propio donde desempeño las
@@ -83,13 +83,13 @@
                 en Excel con aplicación de funciones.</p>
         </div>
         <div class="section__info">
-            <h3 class="section__info h3">2018 - 2021: Carpintería Emilio Powell</h3>
+            <h3 class="section__h3">2018 - 2021: Carpintería Emilio Powell</h3>
             <p><span class="destacado">Cargo:</span> Carpintero.</p>
             <p><span class="destacado">Función:</span> Empresa familiar donde desarrollamos muebles
                 a medida, reparaciones en general y diseños propios.</p>
         </div>
         <div class="section__info">
-            <h3 class="section__info h3">2021 - Actualmente: Tajamar Sistemas Electrónicos</h3>
+            <h3 class="section__h3" >2021 - Actualmente: Tajamar Sistemas Electrónicos</h3>
             <p><span class="destacado">Cargo:</span> Operador.</p>
             <p><span class="destacado">Función:</span> Manejo de sistemas, asignación de tareas y elementos utilizados
                 por los técnicos. Control y calibración de canales analógicos y digitales. Manejo de materiales en
@@ -97,59 +97,59 @@
                 reclamos.</p>
         </div>
         <div class="section__info">
-            <h2 class="section__info h2" id="formacion">FORMACIÓN ACADÉMICA</h2>
-            <h3 class="section__info h3">Secundario: Instituto Industrial “El Obraje” (1992 - 1998)</h3>
+            <h2 class="section__h2--titulo">FORMACIÓN ACADÉMICA</h2>
+            <h3 class="section__h3">Secundario: Instituto Industrial “El Obraje” (1992 - 1998)</h3>
             <p><span class="destacado">TÍTULO:</span> Maestro Mayor de Obras.</p>
-            <br>
-            <h3 class="section__info h3">Universitario: IES Siglo21 (2006 - 2010)</h3>
+
+            <h3 class="section__h3">Universitario: IES Siglo21 (2006 - 2010)</h3>
             <p><span class="destacado">TÍTULO:</span> Diseñador Gráfico y Publicitario.</p>
         </div>
     </section>
 
-    <div class="form">
-        <h2 class="form__h2">FORMULARIO DE CONTACTO</h2>
-        <form class="form__form" action="">
-            <ul>
-                <li>
-                    <label for="nom">Nombre</label><br>
-                    <input type="text" name="Nombre" placeholder="Escribe tu Nombre">
-                <li>
+    <div class="h2">
+        <h2>FORMULARIO DE CONTACTO</h2>
+    </div>
+    <form class="form" action="mailto:seba.powell@gmail.com">
+        <div class="form__column">
+            <div class="form__section">
+                <input type="text" name="Nombre" placeholder="Escribe tu Nombre" class="form__input">
+            </div>
 
-                <li>
-                   <label for="apell">Apellido</label> <br>
-                    <input type="text" name="Apellido" placeholder="Escribe tu Apellido">
-                </li>
+            <div class="form__section">
+                <input type="text" name="Apellido" placeholder="Escribe tu Apellido" class="form__input">
+            </div>
 
-                <li>
-                    <label for="mail">Mail</label> <br>
-                    <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico">
-                </li>
+            <div class="form__section">
+                <input type="text" name="Mail" placeholder="Escribe tu Correo Electrónico" class="form__input">
+            </div>
 
-                <li>
-                    <label for="tel">Telefono</label> <br>
-                    <input type="number" name="Teléfono"
-                        placeholder="Ingresar con código de área sin 0 y número sin 15">
-                </li>
+            <div class="form__section">
+                <input type="number" name="Teléfono" placeholder="Ingresar con código de área sin 0 y número sin 15"
+                    class="form__input">
+            </div>
 
-                <li class="form__form--checkbox">
-                    <input type="checkbox" name="Fijo" value="Fijo" id="fijo">
+            <div class="form__section">
+                <div class="form__checkbox">
+                    <input type="checkbox" name="Fijo" value="Fijo">
                     <label for="Fijo">Fijo</label>
-
-                    <input type="checkbox" name="Celular" value="Celular" id="celular">
+                    <input type="checkbox" name="Celular" value="Celular">
                     <label for="Celular">Celular</label>
-                </li>
+                </div>
+            </div>
+        </div>
 
-                <li>
-                    <label for="Cons">Consulta </label> <br>
-                    <textarea name="Consultas" id="Consulta" cols="80" rows="10"
-                        placeholder="Escribe tu Consulta"></textarea>
-                    <div>
-                        <button type="submit"> Enviar</button>
-                        <button type="reset"> Cancelar</button>
-                    </div>
-                </li>
-            </ul>
-        </form>
+        <div class="form__column">
+            <div class="form__textarea">
+                <textarea name="Consultas" cols="80" rows="10" placeholder="Escribe tu Consulta"></textarea>
+            </div>
+
+            <div class="form__button">
+                <button type="submit"> Enviar</button>
+                <button type="reset"> Cancelar</button>
+            </div>
+        </div>
+    </form>
+
     </div>
 
     <footer class="footer">
