--- a/Modulo 2/Unidad 1/Tarea Ejercicio 1.html
+++ b/Modulo 2/Unidad 1/Tarea Ejercicio 1.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="Tarea Ejercicio 1.css">
-    <script src="Tarea Ejercicio 1.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,23 +17,23 @@
 <body>
     <div class="boton">
         <div class="boton__boton">
-            <button class="boton__boton--1" onclick="colorFondo('darkorange')" >Color 1</button>
+            <button class="boton__boton--1" id="boton1">Color 1</button>
         </div>
 
         <div class="boton__boton">
-            <button class="boton__boton--2" onclick="colorFondo('darkblue')">Color 2</button>
+            <button class="boton__boton--2" id="boton2">Color 2</button>
         </div>
 
         <div class="boton__boton">
-            <button class="boton__boton--3" onclick="colorFondo('darkgreen')">Color 3</button>
+            <button class="boton__boton--3" id="boton3">Color 3</button>
         </div>
 
         <div class="boton__boton">
-            <button class="boton__boton--4" onclick="colorFondo('darkslategray')">Reset</button>
+            <button class="boton__boton--4" id="boton4">Reset</button>
         </div>
     
     </div>
-    
+    <script src="Tarea Ejercicio 1.js"></script>
 </body>
 
 </html>
