--- a/Modulo 2/Unidad 3/Tarea Unidad 3/index.html
+++ b/Modulo 2/Unidad 3/Tarea Unidad 3/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-acordion">
+        <section class="container-fluid container-acordion">
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -147,15 +147,15 @@
                     </div>
                 </div>
         </section>
-        <section class="container-cards">
-            <div class="card" style="width: 18rem;">
+        <section class="container-fluid container-cards">
+            <div class="card">
                 <img src="Imagenes/IMG_20201113_143536.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text"><b>Ilustración tradicional:</b> es el tipo “clásico” de ilustración, en el que
                         se dibuja y pinta a mano.</p>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="Imagenes/IMG_20201108_205406.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text"><b>Ilustración digital:</b> la ilustración digital, en cambio, usa las nuevas
@@ -163,7 +163,7 @@
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="Imagenes/MergerTarjeta.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text"><b>Diseño gráfico:</b> Actividad creativa y técnica que consiste en transmitir
